# SPDX-License-Identifier: MIT
if(UNIT_TESTS)
  include(unit_test.cmake)
  add_subdirectory(components)
  add_subdirectory(libelos)
  add_subdirectory(libelos-cpp)
  if (ELOS_LIBRARY_LITE)
    add_subdirectory(libelos_lite)
  endif (ELOS_LIBRARY_LITE)
  if (ELOS_PLUGINS)
    add_subdirectory(plugins)
  endif (ELOS_PLUGINS)
  add_subdirectory(version)
endif(UNIT_TESTS)
if (ELOS_MOCK_LIBRARY OR UNIT_TESTS)
  add_subdirectory(mocks)
endif()
